src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  display: flex;
  height: 2.5em;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  margin-bottom: 30px;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.login-header {
  width: 100%;
  text-align: center;
  vertical-align: middle;
  color: white;
  margin-top: 0;
  margin-bottom: 1.5em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  background-color: #282c34;
  font-size: x-large;
  font-weight: normal;
}

.login-form {
  display: grid;
  gap: 20px;
  align-items: center;
  justify-items: center;
  margin-bottom: 3.5em;
}

.user-drop-down-label {
  font-size: large;
}

.user-drop-down {
  background-color: white;
  border-radius: 0.5em;
  font-size: medium;
  padding: 0.3em;
}

.navigation-bar {
  width: 100%;
  font-size: large;
}

li.navigation-link {
  list-style: none;
}

.navigation-link {
  color: white;
  text-decoration: none;
  float: left;
  padding-right: 30px;
}

.active-link {
  color: white;
  float: left;
  padding-right: 30px;
}

.new-question-subtitle {
  font-size: large;
}

.new-question-form {
  display: grid;
  align-items: center;
  justify-items: center;
  margin-bottom: 3.5em;
}

.new-question-form input {
  padding: 5px;
  font-size: large;
}

.new-question-form .new-question-option-1 {
  display: block;
  width: 450px;
  margin-bottom: 10px;
}

.new-question-form .new-question-option-2 {
  display: block;
  width: 450px;
  margin-top: 10px;
  margin-bottom: 25px;
}

.new-question-form .new-question-submit {
  width: 450px;
}

table.leader-board {
  margin-left: auto;
  margin-right: auto;
}

table.leader-board td {
  padding: 20px;
}

table.leader-board td.user-rank {
  vertical-align: middle;
  font-size: x-large;
}

table.leader-board td.score-details {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

table.leader-board .answered-questions {
  padding-bottom: 5px;
}

table.leader-board .total-score {
  padding-bottom: 20px;
}

.total-score {
  font-weight: bold;
}

.greeting {
  float: left;
  padding-right: 30px;
}

.logout-button {
  float: right;
  padding-right: 30px;
}

button.logout-button {
  background-color: transparent;
  border: none;
  color: white;
  cursor: pointer;
  font-size: large;
  font-weight: normal;
}

li.logout-button {
  list-style: none;
}

